# proto/proto.swagger.json
@@ -4,10 +4,6 @@
     "title": "proto.proto",
     "version": "version not set"
   },
-  "schemes": [
-    "http",
-    "https"
-  ],
   "consumes": [
     "application/json"
   ],
@@ -16,13 +12,19 @@
   ],
   "paths": {
     "/v1/device-monitor/{UID}": {
-      "delete": {
+      "get": {
         "operationId": "QueryDeviceMonitor",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/supervisory_controller_serviceQueryDeviceMonitorResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -49,6 +51,12 @@
             "schema": {
               "$ref": "#/definitions/supervisory_controller_serviceCensusDeviceResponse"
             }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
           }
         },
         "parameters": [
@@ -73,13 +81,19 @@
       }
     },
     "/v1/device/{UID}": {
-      "post": {
+      "get": {
         "operationId": "QueryDevice",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/supervisory_controller_serviceQueryDeviceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -90,14 +104,6 @@
             "required": true,
             "type": "string",
             "format": "int64"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/supervisory_controller_serviceQueryDeviceRequest"
-            }
           }
         ],
         "tags": [
@@ -107,6 +113,39 @@
     }
   },
   "definitions": {
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "type_url": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
+    "runtimeError": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "type": "string"
+        },
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "details": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protobufAny"
+          }
+        }
+      }
+    },
     "supervisory_controller_serviceCensusDeviceResponse": {
       "type": "object",
       "properties": {
@@ -140,15 +179,6 @@
             "type": "string",
             "format": "date-time"
           }
-        }
-      }
-    },
-    "supervisory_controller_serviceQueryDeviceRequest": {
-      "type": "object",
-      "properties": {
-        "UID": {
-          "type": "string",
-          "format": "int64"
         }
       }
     },
